[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
description = "A procedural macro to de-monomorphize generic methods"
edition = "2018"
keywords = ["monomorphization", "compiler-plugin"]
license = "Apache-2.0"
name = "momo"
readme = "README.md"
repository = "https://github.com/llogiq/momo"
version = "0.1.0"

[profile.release]
opt-level = "z"
codegen_units = 1
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/dtolnay/watt" }

[dependencies]
syn = { version = "1.0", features = ["full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
